--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -3,13 +3,12 @@ nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_20']
 
 [phases.build]
 cmds = [
-  'composer install --no-dev --optimize-autoloader',
+  'composer install',
   'npm install',
   'npm run build',
-  'php artisan config:clear',
+  'cp .env.example .env',
   'php artisan key:generate',
-  'php artisan migrate --force',
-  'php artisan view:clear'
+  'php artisan migrate --force'
 ]
 
 [phases.start]
