--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,13 +1,20 @@
 [phases.setup]
-nixPkgs = ['php82', 'php82Packages.composer', 'nodejs_20']
+nixpkgsArchive = "https://github.com/NixOS/nixpkgs/archive/refs/tags/23.11.tar.gz"
+
+[phases.install]
+cmds = [
+  "composer install --no-dev --optimize-autoloader",
+  "npm install"
+]
 
 [phases.build]
 cmds = [
-  "php artisan migrate --force",
+  "npm run build",
   "php artisan config:cache",
   "php artisan route:cache",
-  "npm run build"
+  "php artisan view:cache",
+  "php artisan migrate --force"
 ]
 
-[phases.start]
-cmd = 'php artisan serve --host=0.0.0.0 --port=${PORT}'
+[start]
+cmd = "php artisan serve --host=0.0.0.0 --port=8080"
