--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -3,13 +3,12 @@ nixpkgsArchive = "https://github.com/NixOS/nixpkgs/archive/refs/tags/23.11.tar.g
 
 [phases.install]
 cmds = [
-  "composer install --no-dev --optimize-autoloader",
-  "npm install"
+  "composer install --no-dev --optimize-autoloader"
+  # npm install tidak diperlukan karena hasil build sudah dipush
 ]
 
 [phases.build]
 cmds = [
-  "npm run build",
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache",
