--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -1,14 +1,12 @@
-[phases.setup]
-nixpkgsArchive = "https://github.com/NixOS/nixpkgs/archive/refs/tags/23.11.tar.gz"
-
 [phases.install]
 cmds = [
-  "composer install --no-dev --optimize-autoloader"
-  # npm install tidak diperlukan karena hasil build sudah dipush
+  "composer install --no-dev --optimize-autoloader",
+  "npm ci"
 ]
 
 [phases.build]
 cmds = [
+  "npm run build",
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache",
