--- a/.nixpacks.toml
+++ b/.nixpacks.toml
@@ -6,6 +6,7 @@ cmds = [
 
 [phases.build]
 cmds = [
+  "npm run build",
   "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache",
